--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -28,15 +28,15 @@
         <item name="android:textColor">@android:color/black</item>
     </style>
 
-    <style name="LargeTextTheme" >
+    <style name="LargeTextTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-        <item name="android:typeface" >serif</item>
-        <item name="android:textSize" >19pt</item>
-        <item name="android:shadowDx" >1.5</item>
-        <item name="android:shadowDy" >1.5</item>
-        <item name="android:shadowRadius" >1</item>
-        <item name="android:shadowColor" >#AAAAAA</item>
-        <item name="android:gravity" >center</item>
+        <item name="android:typeface">serif</item>
+        <item name="android:textSize">19pt</item>
+        <item name="android:shadowDx">1.5</item>
+        <item name="android:shadowDy">1.5</item>
+        <item name="android:shadowRadius">1</item>
+        <item name="android:shadowColor">#AAAAAA</item>
+        <item name="android:gravity">center</item>
     </style>
 
     <style name="popupMenuStyle" parent="Base.Widget.AppCompat.PopupMenu.Overflow" />
@@ -169,8 +169,23 @@
     </style>
 
     <style name="BlueTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
     <style name="BlueTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="FullscreenTheme" parent="AppTheme">
+        <item name="android:actionBarStyle">@style/FullscreenActionBarStyle</item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowBackground">@null</item>
+        <item name="metaButtonBarStyle">?android:attr/buttonBarStyle</item>
+        <item name="metaButtonBarButtonStyle">?android:attr/buttonBarButtonStyle</item>
+    </style>
+
+    <style name="FullscreenActionBarStyle" parent="Widget.AppCompat.ActionBar">
+        <item name="android:background">@color/black_overlay</item>
+    </style>
 
 </resources>
