--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -39,7 +39,7 @@
     <color name="text_color_primary">#212121</color>
     <color name="text_second_color_primary">#727272</color>
 
-    <color name="grey" >#ffbebebe</color>
+    <color name="grey">#ffbebebe</color>
     <color name="grey_1">#9E9E9E</color>
     <color name="dark_grey">#FF080808</color>
     <color name="light_grey">#ffbebebe</color>
@@ -52,4 +52,6 @@
     <color name="window_background">@android:color/white</color>
 
     <color name="background_tab_pressed">#6633B5E5</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
