--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -15,12 +15,12 @@
         <include layout="@layout/content_home" />
 
         <android.support.design.widget.NavigationView
+            android:layout_marginTop="-26dp"
             android:id="@+id/nav_view"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
             app:headerLayout="@layout/nav_header_home"
             app:menu="@menu/activity_home_drawer" />
-
     </android.support.v4.widget.DrawerLayout>
 </LinearLayout>
