--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -8,10 +8,10 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/tabs"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         app:tabIndicatorColor="?attr/colorPrimary"
         app:tabSelectedTextColor="?attr/colorPrimary"
-        app:tabTextColor="@color/text_color_primary"  />
+        app:tabTextColor="@color/text_second_color_primary" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_content"
