--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -1,36 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="186dp"
-    android:background="@drawable/side_nav_bar"
+    android:background="@mipmap/mine_bg"
     android:gravity="bottom"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="42dp"
-    android:orientation="vertical">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@android:drawable/sym_def_app_icon"
-        android:layout_weight="1" />
+        android:id="@+id/user_avatar"
+        android:layout_width="85dip"
+        android:layout_height="85dip"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="8dip"
+        android:background="@drawable/shape_round_user_icon"
+        android:padding="3dip"
+        android:scaleType="fitXY" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Android Studio"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:layout_weight="1" />
+        android:id="@+id/tv_user_name"
+        android:layout_width="135dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/user_avatar"
+        android:layout_marginLeft="-16dp"
+        android:gravity="center"
+        android:text="清风丶徐来"
+        android:textColor="@color/window_background" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:text="android.studio@android.com"
-        android:layout_weight="1" />
-
-</LinearLayout>
+</RelativeLayout>
