--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,7 @@
     <dimen name="preference_divider_height">0.6dp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="edit_userinfo_item_height">50dp</dimen>
+    <dimen name="edit_userinfo">14sp</dimen>
+    <dimen name="edit_userinfo_item_width">200dp</dimen>
 </resources>
