--- a/app/src/main/res/layout/layout_foot_loading.xml
+++ b/app/src/main/res/layout/layout_foot_loading.xml
@@ -14,9 +14,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:text="正在加载"
         android:textColor="?android:textColorSecondary"
-        android:textSize="16dp" />
+        android:textSize="16sp" />
 
 </LinearLayout>
