--- a/app/src/main/res/menu/home.xml
+++ b/app/src/main/res/menu/home.xml
@@ -2,14 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/action_search"
-        android:icon="@drawable/ic_settings_black_48dp"
-        android:title="@string/search"
-        app:showAsAction="ifRoom|collapseActionView" />
-
     <item android:id="@+id/action_more"
-        android:icon="@drawable/ic_settings_black_48dp"
+        android:icon="@drawable/fab_add"
         android:title="@string/more"
         app:showAsAction="always">
         <menu>
