--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,11 +2,11 @@
 <resources>
     <color name="colorPrimary">#03A9F4</color>
     <color name="colorPrimaryDark">#0288D1</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#448AFF</color>
 
-    <color name="red">#F9724E</color>
-    <color name="dark_red">#F4511E</color>
-    <color name="accent_red">#FF6347</color>
+    <color name="red">#FF5722</color>
+    <color name="dark_red">#E64A19</color>
+    <color name="accent_red">#FF5722</color>
 
     <color name="brown">#795548</color>
     <color name="dark_brown">#5D4037</color>
