--- a/app/src/main/res/layout/item_expandable_lv1.xml
+++ b/app/src/main/res/layout/item_expandable_lv1.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:background="@android:color/white"
-              android:layout_width="match_parent"
-              android:layout_height="40dp"
-              android:orientation="horizontal"
-              android:gravity="center_vertical">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="50dp"
+             android:gravity="center_vertical"
+             android:foreground="?android:attr/selectableItemBackground"
+             android:background="@android:color/white">
 
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:textColor="@android:color/black"/>
-</LinearLayout>
+</FrameLayout>
