--- a/app/src/main/res/layout/activity_common_popup_window.xml
+++ b/app/src/main/res/layout/activity_common_popup_window.xml
@@ -9,8 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="?attr/colorPrimary"
-        android:layout_centerInParent="true"
-        android:layout_margin="32dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:textColor="@color/white"
         android:text="点我弹窗" />
 </RelativeLayout>
