--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -67,4 +67,5 @@
     <color name="black_overlay">#66000000</color>
     <color name="retry_button_background">#30000000</color>
     <color name="retry_button_background_stroke">#50000000</color>
+    <color name="black">#FF000000</color>
 </resources>
