--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -4,32 +4,34 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/home"
-            android:icon="@drawable/ic_home_black_48dp"
+            android:icon="@drawable/ic_home"
             android:title="主页" />
         <item
             android:id="@+id/widget"
-            android:icon="@drawable/ic_apps_black_48dp"
+            android:icon="@drawable/ic_apps"
             android:title="控件" />
         <item
-            android:id="@+id/message"
-            android:icon="@drawable/ic_textsms_black_48dp"
-            android:title="消息" />
+            android:id="@+id/thread"
+            android:icon="@drawable/ic_thread"
+            android:title="线程" />
         <item
             android:id="@+id/settings"
-            android:icon="@drawable/ic_settings_black_48dp"
+            android:icon="@drawable/ic_settings"
             android:title="设置" />
     </group>
 
     <item android:title="其他">
         <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="分享" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="发送" />
+            <group android:checkableBehavior="single">
+                <item
+                    android:id="@+id/nav_data"
+                    android:icon="@drawable/ic_data"
+                    android:title="数据结构" />
+                <item
+                    android:id="@+id/nav_algorithm"
+                    android:icon="@drawable/ic_algorithm"
+                    android:title="算法分析" />
+            </group>
         </menu>
     </item>
 
