--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="186dp"
+    android:layout_height="235dp"
     android:background="@mipmap/mine_bg"
     android:gravity="bottom"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:padding="@dimen/activity_horizontal_margin">
 
     <ImageView
         android:id="@+id/iv_user_avatar"
-        android:layout_width="85dp"
-        android:layout_height="85dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_marginBottom="16dp"
         android:layout_marginStart="8dp"
         android:background="@drawable/shape_round_user_icon"
@@ -24,9 +21,11 @@
         android:layout_width="133dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/iv_user_avatar"
-        android:layout_marginStart="-16dp"
+        android:layout_marginStart="-13dp"
+        android:layout_marginBottom="8dp"
         android:gravity="center"
         android:text="清风丶徐来"
+        android:textSize="@dimen/sp_16"
         android:textColor="@color/window_background" />
 
 </RelativeLayout>
