--- a/app/src/main/res/layout/activity_contact_edittext.xml
+++ b/app/src/main/res/layout/activity_contact_edittext.xml
@@ -3,10 +3,15 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+
     <EditText
         android:id="@+id/et_contact"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
+        android:paddingStart="@dimen/activity_horizontal_margin"
+        android:paddingEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:hint="@string/search"/>
 
     <android.support.v7.widget.RecyclerView
