--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -30,8 +30,8 @@
                 app:expandedTitleMarginStart="48dp"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-                <android.support.v4.view.ViewPager
-                    android:id="@+id/vp_banner"
+                <com.youth.banner.Banner
+                    android:id="@+id/banner"
                     android:layout_width="match_parent"
                     android:layout_height="180dp"
                     app:layout_collapseMode="parallax"
@@ -43,6 +43,8 @@
                     android:layout_height="?attr/actionBarSize"
                     android:theme="@style/ToolbarTheme"
                     android:layout_marginTop="25dp"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
                     app:layout_collapseMode="pin"
                     app:layout_scrollFlags="scroll|enterAlways">
 
