--- a/app/src/main/res/layout/item_blog.xml
+++ b/app/src/main/res/layout/item_blog.xml
@@ -14,41 +14,39 @@
         app:cardElevation="0dp">
 
         <ImageView
-            android:id="@+id/iv_course"
+            android:id="@+id/iv_android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@mipmap/city"
+            android:background="@mipmap/bg_a2"
             android:contentDescription="@null"/>
     </android.support.v7.widget.CardView>
 
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_toEndOf="@id/cv_picture"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:textColor="@color/text_color_primary"
-        android:textSize="@dimen/sp_16"/>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_below="@id/tv_title"
+        android:layout_height="70dp"
         android:layout_toEndOf="@id/cv_picture"
-        android:orientation="horizontal">
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:lineSpacingExtra="5dp"
+            android:textColor="@color/text_color_primary"
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/tv_start_date"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="35dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:ellipsize="end"
             android:maxLines="1"
+            android:gravity="end"
             android:textColor="@color/text_second_color_primary"
             android:textSize="14sp"/>
-
     </LinearLayout>
 </RelativeLayout>
