--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -2,30 +2,29 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="235dp"
-    android:background="@mipmap/mine_bg"
-    android:gravity="bottom"
-    android:padding="@dimen/activity_horizontal_margin">
+    android:gravity="center_vertical"
+    android:background="@mipmap/city">
 
     <ImageView
         android:id="@+id/iv_user_avatar"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="40dp"
+        android:contentDescription="@null"
         android:background="@drawable/shape_round_user_icon"
         android:padding="3dp"
-        android:scaleType="fitXY" />
+        android:scaleType="fitXY"/>
 
     <TextView
         android:id="@+id/tv_user_name"
-        android:layout_width="133dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/iv_user_avatar"
-        android:layout_marginStart="-13dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="65dp"
         android:gravity="center"
         android:text="清风丶徐来"
-        android:textSize="@dimen/sp_16"
-        android:textColor="@color/window_background" />
+        android:textSize="22sp"
+        android:textColor="@color/white"
+        android:layout_toEndOf="@+id/iv_user_avatar" />
 
 </RelativeLayout>
