--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,7 +24,7 @@
     <color name="dark_yellow">#F57C00</color>
     <color name="accent_yellow">#FF9800</color>
 
-    <color name="deep_purple">#DA7ACF</color>
+    <color name="deep_purple">#7C4DFF</color>
     <color name="dark_deep_purple">#512DA8</color>
     <color name="accent_deep_purple">#7C4DFF</color>
 
